[gd_scene load_steps=16 format=3 uid="uid://c120l8o4kncu2"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_1dyl1"]
[ext_resource type="PackedScene" uid="uid://dwnwju7rvg8qi" path="res://scenes/ui/audio_button/audio_button.tscn" id="1_g6dok"]
[ext_resource type="PackedScene" uid="uid://bkdmenm1ry2hm" path="res://scenes/environment/space_backdrop/space_backdrop.tscn" id="2_drws3"]
[ext_resource type="PackedScene" uid="uid://c7aoc4ktknfq6" path="res://scenes/ui/vignette/vignette.tscn" id="3_l6rp7"]
[ext_resource type="Texture2D" uid="uid://cygcdnnb063c6" path="res://scenes/game_objects/player/player.png" id="5_sellq"]
[ext_resource type="Texture2D" uid="uid://gpjfrgqm7f1x" path="res://scenes/ui/main_menu/earth.png" id="6_v1o52"]

[sub_resource type="Animation" id="Animation_o6eun"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q4q53"]
resource_name = "default"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.0, -0.0872665, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vpcgc"]
_data = {
"RESET": SubResource("Animation_o6eun"),
"default": SubResource("Animation_q4q53")
}

[sub_resource type="Animation" id="Animation_dcveo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Planet:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a4ttn"]
resource_name = "default"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Planet:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vonvh"]
_data = {
"RESET": SubResource("Animation_dcveo"),
"default": SubResource("Animation_a4ttn")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_v1hoc"]
atlas = ExtResource("5_sellq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia7ox"]
atlas = ExtResource("5_sellq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xbelc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1hoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia7ox")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1dyl1")

[node name="Vignette" parent="." instance=ExtResource("3_l6rp7")]

[node name="SpaceBackdrop" parent="." instance=ExtResource("2_drws3")]
scroll_offset = Vector2(20, 0)

[node name="CatAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Cat/AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_vpcgc")
}
autoplay = "default"

[node name="PlanetAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vonvh")
}
autoplay = "default"

[node name="MenuContainer" type="MarginContainer" parent="."]
z_index = 20
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
z_index = 20
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MarginContainer"]
z_index = 20
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/MarginContainer/VBoxContainer"]
z_index = 20
layout_mode = 2
theme_override_constants/margin_left = 2

[node name="Label" type="Label" parent="MenuContainer/MarginContainer/VBoxContainer/MarginContainer"]
z_index = 20
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CATSTRONAUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MarginContainer/VBoxContainer"]
z_index = 20
layout_mode = 2

[node name="PlayButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("1_g6dok")]
unique_name_in_owner = true
z_index = 20
layout_mode = 2
text = "play"

[node name="OptionsButton" parent="MenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("1_g6dok")]
unique_name_in_owner = true
z_index = 20
layout_mode = 2
text = "options"

[node name="Cat" type="Node2D" parent="."]
position = Vector2(242, 140)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Cat"]
sprite_frames = SubResource("SpriteFrames_xbelc")
offset = Vector2(0, -16)

[node name="Planet" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(239, 192)
texture = ExtResource("6_v1o52")

[node name="Camera2D" type="Camera2D" parent="."]
